fixed white space

--- a/style.css
+++ b/style.css
@@ -6,8 +6,7 @@ body {
 }
 
 .banner {
-    height: 100%;
-    width: 100%;
+    height: 100vh;
     background: url('img/uhMain.png') no-repeat center center/cover;
 }
 
@@ -23,7 +22,6 @@ body {
     letter-spacing: 1px;
     font-size: 1.1em;
     padding: 0 1em;
-    /* margin-bottom: 3em; */
 }
 
 .fourty {
@@ -60,13 +58,6 @@ body {
 /* IPAD AND UP */
 
 @media (min-width: 768px) {
-
-    .banner {
-        height: 100%;
-        width: 100%;
-        background: url('img/uhMain.png') no-repeat center center/cover;
-    }
-
     .banner .title {
         width: 67%;
         margin-bottom: 1em;
@@ -106,12 +97,5 @@ body {
     .fourty {
         width: 80%;
         margin-bottom: 1.5em;
-    }
-}
-
-/* Small devices (landscape phones, 576px and up) */
-@media (max-width: 576px) {
-    .banner {
-        height: 100%;
     }
 }
